log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 08:10:47 PM UTC: 
 tests:  0|6
total_score: 0/70
b851aa8
Thu 30 Mar 2023 08:22:06 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2aeb9c6
Thu 30 Mar 2023 08:25:21 PM UTC: 
 tests:  1|5
total_score: 10/70
3282980
Thu 30 Mar 2023 08:31:29 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   24 |   if (l->size == l->capacity)
      |   ^~
arraylist.c:26:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   26 |     l->data = (void **)realloc (l->data, l->capacity*sizeof(void *));
      |     ^
cc1: all warnings being treated as errors
Compilation failed
154b59a
Thu 30 Mar 2023 08:31:56 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
dd2c851
Thu 30 Mar 2023 08:39:14 PM UTC: 
 arraylist.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
0ee2c7f
Thu 30 Mar 2023 08:39:41 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:39:62: error: expected expression before ‘)’ token
   39 |     l->data = (void **) realloc (l->data, l->capacity*sizeof());
      |                                                              ^
Compilation failed
02e1f1f
Thu 30 Mar 2023 08:39:58 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
98c4fd5
Thu 30 Mar 2023 08:42:06 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 30/70
080705b
Thu 30 Mar 2023 08:42:55 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
d381d5f
Thu 30 Mar 2023 08:43:57 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
2791bb7
Thu 30 Mar 2023 08:44:14 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
ba47abb
Thu 30 Mar 2023 09:48:46 PM UTC: 
 arraylist.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 50/70
d089bab
Thu 30 Mar 2023 09:49:57 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  16|0
total_score: 70/70
67bdf3f
